# nrslib

./: LICENSE  README.md  pyproject.toml
nrslib/: __init__.py
nrslib/configs/: BERT.yaml  test.yaml  train.yaml
nrslib/configs/callbacks/: default.yaml  dkn.yaml  naml.yaml  test.yaml
nrslib/configs/datamodule/: mind.yaml
nrslib/configs/experiment/: MKR.yaml  collaborativeFiltering.yaml  dkn.yaml  lstur.yaml  naml.yaml  nrms.yaml  rippleNet.yaml
nrslib/configs/hparams_search/: mind_Collaborative_optuna.yaml  mind_MKR_optuna.yaml  mind_RippleNet_optuna.yaml
nrslib/configs/logger/: tensorboard.yaml
nrslib/configs/model/: MKR.yaml  bert.yaml  collaborativeFiltering.yaml  dkn.yaml  lstur.yaml  naml.yaml  nrms.yaml  rippleNet.yaml
nrslib/configs/trainer/: default.yaml  dkn.yaml  naml.yaml
nrslib/docs/source/: conf.py  datamodules.rst  index.rst  models.rst  src.baselines.rst  src.datamodules.components.rst  src.datamodules.mind.rst  src.datamodules.rst  src.models.BERT.rst  src.models.DKN.rst  src.models.LSTUR.rst  src.models.MKR.rst  src.models.collaborativeFiltering.rst  src.models.components.attention.rst  src.models.components.click_predictor.rst  src.models.components.rst  src.models.naml.rst  src.models.nrms.rst  src.models.rippleNet.rst  src.models.rst  src.rst  src.vendor.rst  tutorial.rst
nrslib/src/: testing_pipeline.py  training_pipeline.py
nrslib/src/datamodules/mind/: datamodule_BERT.py  datamodule_Base.py  datamodule_CollaborativeFiltering.py  datamodule_MKR.py  datamodule_NAML.py  datamodule_RippleNet.py  dataset.py  download.py  parse.py  preprocessing.py
nrslib/src/models/BERT/: __init__.py
nrslib/src/models/DKN/: KCNN.py  __init__.py  attention.py
nrslib/src/models/LSTUR/: __init__.py  news_encoder.py  user_encoder.py
nrslib/src/models/MKR/: __init__.py  kGDataset.py  layers.py
nrslib/src/models/collaborativeFiltering/: __init__.py
nrslib/src/models/components/: metrics.py
nrslib/src/models/naml/: __init__.py  news_encoder.py  user_encoder.py
nrslib/src/models/nrms/: __init__.py  news_encoder.py  user_encoder.py
nrslib/src/models/rippleNet/: __init__.py
src/: modifying.rst
(+3 files in other folders)
